[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["htmlquill*"]

[tool.setuptools.package-data]
htmlquill = [
    "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project]
name = "htmlquill"
description = "html to markdown"
authors = [{name = "htmlquill Contributors"}]
maintainers = [{name = "Holger Nahrstaedt"}]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = ["cli", "markdown", "html", "developer-tools"]
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "tomli>=2.0; python_version < '3.11'",
    "typer>=0.12",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dynamic=["version"]

[project.scripts]
htmlquill = "htmlquill.cli:main"

[project.urls]
Homepage = "https://github.com/holgern/htmlquill"
Repository = "https://github.com/holgern/htmlquill"
Issues = "https://github.com/holgern/htmlquill/issues"
Changelog = "https://github.com/holgern/htmlquill/releases"

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pytest",
    "pytest-xdist",
    "ruff",
    "twine",
    "types-PyYAML",
    "vaultconfig>=0.1.0",
]
rich = [
    "rich",
]
browser = [
    "playwright>=1.40",
]
secure = [
    "vaultconfig>=0.1.0",
]

[tool.setuptools_scm]
write_to = "htmlquill/_version.py"

[tool.tox]
legacy_tox_ini = """

[testenv]
deps =
    pytest
commands =
    pytest -q -m 'not slow and not integration' {posargs}

"""

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
]